# trading-agents

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  config.py  graph.py  main.py  pyproject.toml  requirements.txt  scheduler.py  state.py
agents/: base.py  decision.py  execution.py  extraction.py  feedback.py  formatter.py  monitor.py  strategy.py  synthesis.py
agents/fetchers/: market_data.py  news.py  sec.py  social.py  transcript.py
backtesting/: engine.py  metrics.py
dashboard/: app.py
dashboard/frontend/: app.js  index.html  styles.css
docs/: V1_IMPLEMENTATION_CONTRACT.md
docs/plans/: 2026-03-18-context-reset-next-tasks.md  2026-03-18-next-chat-handoff.md
evals/: test_backtesting.py  test_config.py  test_dashboard_api.py  test_dashboard_frontend.py  test_decision.py  test_execution.py  test_extraction_synthesis.py  test_feedback.py  test_fetchers_remaining.py  test_fetchers_sec_news.py  test_formatter.py  test_graph.py  test_graph_parallel.py  test_main.py  test_monitor.py  test_notifications.py  test_persistence.py  test_scheduler.py  test_trace.py
events/: bus.py
notifications/: __init__.py  email.py  slack.py
utils/: audit_store.py  cache.py  checkpoint_store.py  llm.py  logger.py  rate_limiter.py  retry.py  token_counter.py  trace.py
